<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_password_tView_of_change_password_activity"/>
     
    <EditText
        android:id="@+id/old_password_eText_of_change_password_activity"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password_tView_of_change_password_activity"/>
     
    <EditText
        android:id="@+id/new_password_eText_of_change_password_activity"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_new_password_tView_of_change_password_activity"/>
     
    <EditText
        android:id="@+id/verify_new_password_eText_of_change_password_activity"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        />
    
    <Button
        android:id="@+id/ok_button_of_change_password_activity"
        android:text="@string/ok_button_of_change_password_activity"
        android:layout_height="wrap_content"
        android:layout_width ="fill_parent" 
        />
    
</LinearLayout>