<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RadioGroup 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">
	    <RadioButton
	        android:id="@+id/enable_lock_rButton_of_enable_face_lock_activity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/enable_lock_rButton_of_enable_face_lock_activity"
	        android:onClick="onRadioButtonClicked" />
	    
	    <RadioButton
	        android:id="@+id/disable_lock_rButton_of_enable_face_lock_activity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/disable_lock_rButton_of_enable_face_lock_activity"
	        android:onClick="onRadioButtonClicked"
	         />
	    </RadioGroup>
    
    <Button
        android:id="@+id/ok_button_of_enable_face_lock_activity"
        android:text="@string/ok_button_of_enable_enable_face_lock_activity"
        android:layout_height="wrap_content"
        android:layout_width ="match_parent" 
        />
    
</LinearLayout>